--- a/public/css/css.css
+++ b/public/css/css.css
@@ -157,14 +157,15 @@ margin:auoto
 .indexban .bantxt:hover a:after{ height:100%; }
 .indexban .bantxt:hover a{ color:#fff;}
 /* index about us */
-.indexaboutus{ position:relative; width:100%; height:6rem; background:#fff; padding-bottom:3rem; }
-.indexaboutus .row{ width:50%; float:left; height:100%; position:relative;}
-.indexaboutus .leftarticle{ text-align:right; padding:0 0.2rem;}
+.indexaboutus{ position:relative; width:100%; height:6rem; background:#fff; padding-bottom:2rem; }
+.indexaboutus .leftarticle{ width:70%; float:left; height:100%; position:relative;}
+.indexaboutus .rightbtnbox{ width:30%; float:left; height:100%; position:relative;}
+.indexaboutus .leftarticle{ text-align:right; padding-left:1.5rem;}
 .indexaboutus .leftarticle .bgarimg{ width:5.04rem; height:5.2rem; background:url(/../images/newfrontend/bg05.png) no-repeat center right; position:absolute; top:-1.3rem; right:0; z-index:2;}
 
-.indexaboutus .leftarticle article{ text-align:center; display:inline-block; width:5.04rem;  font-size:0.16rem;  font-family:"Microsoft Yahei","Arial"; line-height:0.24rem; color:#373737; position:relative; z-index:3;}
+.indexaboutus .leftarticle article{ text-align:center; display:inline-block; width:100%;  font-size:0.16rem;  font-family:"Microsoft Yahei","Arial"; line-height:0.24rem; color:#373737; position:relative; z-index:3;}
 
-.indexaboutus .leftarticle article .block{ height:0.98rem; overflow:hidden;}
+.indexaboutus .leftarticle article .block{ height:100%; overflow:hidden;}
 .indexaboutus .leftarticle article .block.on{ height:auto;}
 .indexaboutus .leftarticle article h1{ color:#373737; font-size:0.3rem;  font-family:"Microsoft Yahei","Arial"; line-height:0.35rem; position:relative;}
 .indexaboutus .leftarticle article h1:after{ content:""; width:0.3rem; height:0.04rem; background:#c61e1f; margin:0.08rem auto;}
@@ -175,12 +176,12 @@ margin:auoto
 .indexaboutus .leftarticle article .viewmore.on i{ transform: rotate(180deg); -webkit-transform: rotate(180deg); -moz-transform: rotate(180deg); -ms-transform: rotate(180deg); -o-transform: rotate(180deg); top:0;}
 
 .indexaboutus .rightbtnbox{ padding-left:1.25rem;}
-.indexaboutus .rightbtnbox a{ display:block; width:3.28rem; height:0.65rem; text-align:center; position:relative; color:#fff; font-size:0.23rem;  font-family:"Microsoft Yahei","Arial"; line-height:0.65rem; -webkit-transition: all 0.2s ease-out; -moz-transition: all 0.2s ease-out; -o-transition: all 0.2s ease-out; transition: all 0.2s ease-out; }
+.indexaboutus .rightbtnbox a{ display:block; width:2.5rem; height:0.5rem; text-align:center; position:relative; color:#fff; font-size:0.2rem;  font-family:"Microsoft Yahei","Arial"; line-height:0.5rem; -webkit-transition: all 0.2s ease-out; -moz-transition: all 0.2s ease-out; -o-transition: all 0.2s ease-out; transition: all 0.2s ease-out; }
 .indexaboutus .rightbtnbox a .box{ position:relative; z-index:2;}
-.indexaboutus .rightbtnbox a:nth-of-type(1){ background:#c61e1f; margin-bottom:0.5rem;}
+.indexaboutus .rightbtnbox a:nth-of-type(1){ background:#c61e1f; margin-bottom:0.25rem;}
 .indexaboutus .rightbtnbox a:nth-of-type(2){ background:#023F5B;}
 
-.indexaboutus .rightbtnbox a:hover{ font-size:0.3rem;}
+.indexaboutus .rightbtnbox a:hover{ font-size:0.23rem;}
 /* 首页关于我们按钮 hover效果 */
 /* .indexaboutus .rightbtnbox a:after{ content:""; width:100%; height:0; position:absolute; left:0; -webkit-transition: all 0.2s ease-out; -moz-transition: all 0.2s ease-out; -o-transition: all 0.2s ease-out; transition: all 0.2s ease-out; z-index:1;}
 .indexaboutus .rightbtnbox a:hover:after{ height:100%;}
@@ -1520,7 +1521,14 @@ input.width4{ width:50%; }
 	.contactban .contactbanblock .downinfoblock { padding: 0.45rem 0.12rem 0.25rem; }
 }
 
+.homeintro {
+    font-size: 1.2em;
+    font-weight: bold;
+}
 
+article .block p{
+    font-size: 0.95em;
+}
 
 
 
