seo content add

--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1521,7 +1521,7 @@ input.width4{ width:50%; }
 	.contactban .contactbanblock .downinfoblock { padding: 0.45rem 0.12rem 0.25rem; }
 }
 
-.homeintro {
+.hintro {
     font-size: 1.2em;
     font-weight: bold;
 }
