--- a/resources/views/frontend/custom/_custom.scss
+++ b/resources/views/frontend/custom/_custom.scss
@@ -46,7 +46,7 @@
   height:100%;
   width: 60%;
   float:right;
-  margin:auto 0;
+  margin:2em 0 auto 0;
   padding-left:2em;
   border-left: 2px solid rgb(198,30,31);
 }
