--- a/resources/views/frontend/custom/_custom.scss
+++ b/resources/views/frontend/custom/_custom.scss
@@ -78,7 +78,9 @@ $theme-color:#c9251f;
 .gallery-mt{
   margin-top: 0.44rem;
 }
-
+.bg-light{
+  background-color: rgb(246,246,246);
+}
 .footer{
   padding:60px 0 80px 0;
   background-color: rgb(246,246,246);
@@ -110,7 +112,9 @@ $theme-color:#c9251f;
 
 .color-bg{
   background-color: $theme-color;
-  color:rgb(201,37,31);
+}
+.color-normal{
+  color:$theme-color;
 }
 
 #footer-color{
@@ -121,4 +125,102 @@ $theme-color:#c9251f;
     font-size:50px;
     margin:0 40px;
   }
+}
+
+#comments{
+  ul li{
+    h4{
+      color: $theme-color;
+      font-size:20px;
+      font-weight:bold;
+      margin-bottom:0.5em;
+    }
+    p{
+      font-size:18px;
+    }
+    padding:0 1em;
+    margin-bottom:2em;
+  }
+}
+
+#why {
+  .why-wrap {
+    margin: auto 0;
+    img {
+      width: 90px;
+    }
+    h3 {
+      font-size: 22px;
+      font-weight: bold;
+    }
+    h4 {
+      font-size: 20px;
+      font-weight: bold;
+    }
+    p {
+      padding: 1em;
+      font-size: 18px;
+    }
+  }
+  @media (min-width: 1200px){
+    .container {
+      max-width: 1400px;
+    }
+  }
+}
+
+#main{
+    padding: 0 1rem;
+    margin: 3em 1px;
+    position: relative;
+  .Navbox{
+    float:none;
+    display: inline-block;
+    @media screen and (max-width: 768px){
+      display: none;
+    }
+  }
+  .abs-img{
+    position: absolute;
+    top:0;
+    right:0;
+    @media screen and (max-width: 768px){
+      display: none;
+    }
+  }
+  h2{
+    font-size: 35px;
+    margin-bottom: 10px;
+    color:#0a0a0a;
+  }
+  .main-swrap{
+    text-align:center;
+    img{
+      height: 80px;
+    }
+    h3{
+      font-size:16px;
+      color:#0a0a0a;
+      padding: 1em 0 0.3em 0;
+    }
+    h4{
+      font-size:15px;
+      color:#0a0a0a;
+    }
+  }
+}
+
+.bg-btn{
+  background-color:$theme-color;
+  padding:0.5em 0;
+  text-align:center;
+  width:100%;
+  display: block;
+  color:#fff !important;
+  font-size:20px;
+}
+.btn-wrap{
+  max-width:300px;
+  text-align:center;
+  margin:5em 0 2em 0;
 }
