--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 html { width:100%; height:100%; -webkit-text-size-adjust:100%; -moz-text-size-adjust:100%; -ms-text-size-adjust:100%; -o-text-size-adjust:100%; text-size-adjust:100%;  font-size:100px;}
 body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,fieldset,legend,button,input,textarea,th,td,figure{ margin:0; padding:0; }
-body,button,input,select,textarea { font-family:"Roboto-Light",Tahoma,Arial,sans-serif; word-wrap:break-word; }
+body,button,input,select,textarea { font-family: "Microsoft Yahei","Arial"; word-wrap:break-word; }
 textarea {resize:none;}
 h1,h2,h3,h4,h5,h6{ font-size:100%; font-weight:normal; }
 address,cite,dfn,em,var{font-style:normal}
